--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="kr.hs.emirim.qls6521.yeah.MainActivity"
-    android:orientation="vertical">//수직으로 하겠다 전체적인 오리엔테이션
+    android:orientation="vertical">
 
     <Chronometer
         android:id="@+id/chrono"
@@ -49,11 +49,12 @@
             <CalendarView
                 android:id="@+id/calendar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_parent"/>
+                android:layout_height="wrap_content"/>
             <TimePicker
-                android:id="@+id/time"
+                android:id="@+id/time_pick"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:timePickerMode="spinner"
                 android:visibility="invisible"/>
 
         </FrameLayout>
@@ -62,7 +63,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"/>
+        android:orientation="horizontal">
         <Button
             android:id="@+id/but_done"
             android:layout_width="wrap_content"
@@ -73,3 +74,4 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     </LinearLayout>
+</LinearLayout>
